@@ -1,0 +1,103 @@
+# This file determines the rules based on which primitives are grouped into
+# categories.
+#
+# Categories are defined as lines with their names, followed by lines
+# containing rules. Rules are regular expressions prefixed with either:
+#   - f: for filename matching, or
+#   - t: for file title matching.
+#
+# Primitives are matched by the regular expressions in order as they are
+# defined, the first category whose regex matches the primitive's filename
+# gets the primitive.
+#
+# Any primitive which does not match any of the regexes default into an
+# "Other" category. Do not define this category explicitly!
+#
+# All lines starting with # are comments and are ignored.
+
+Rings
+f:[0-9]+\-[0-9]+ring[0-9]\.dat
+f:[0-9]+\-[0-9]+rin[0-9]+\.dat
+f:[0-9]+\-[0-9]+ri[0-9]+\.dat
+
+Cones
+f:[0-9]+\-[0-9]+cone[0-9]\.dat
+f:[0-9]+\-[0-9]+con[0-9]+\.dat
+f:[0-9]+\-[0-9]+ri[0-9]+\.dat
+
+Circles
+f:[0-9]+\-[0-9]+edge\.dat
+
+Cylinders
+f:[0-9]+\-[0-9]+cyli[0-9]*\.dat
+
+Discs
+f:[0-9]+\-[0-9]+disc\.dat
+
+Disc Negatives
+f:[0-9]+\-[0-9]+ndis\.dat
+
+Open/Closed Cylinders
+f:[0-9]+\-[0-9]+cylo\.dat
+f:[0-9]+\-[0-9]+cylc\.dat
+f:[0-9]+\-[0-9]+cylc2\.dat
+
+Sloped Cylinders
+f:[0-9]+\-[0-9]+cyls\.dat
+f:[0-9]+\-[0-9]+cys2\.dat
+f:[0-9]+\-[0-9]+cylse\.dat
+
+Chords
+f:[0-9]+\-[0-9]+chrd\.dat
+f:[0-9]+\-[0-9]+chr\.dat
+
+Spheres
+f:[0-9]+\-[0-9]+sphe\.dat
+
+Torii (Inside)
+f:t[0-9]+i[0-9]+\.dat
+
+Torii (Outside)
+f:r[0-9]+o[0-9]+\.dat
+f:t[0-9]+o[0-9]+\.dat
+
+Torii (Tube)
+f:t[0-9]+q[0-9]+\.dat
+
+Rings (48)
+f:48\\[0-9]+\-[0-9]+ring[0-9]\.dat
+f:48\\[0-9]+\-[0-9]+rin[0-9]+\.dat
+f:48\\[0-9]+\-[0-9]+ri[0-9]+\.dat
+
+Cones (48)
+f:48\\[0-9]+\-[0-9]+cone[0-9]\.dat
+f:48\\[0-9]+\-[0-9]+con[0-9]+\.dat
+f:48\\[0-9]+\-[0-9]+ri[0-9]+\.dat
+
+Other (48)
+f:48\\.*\.dat
+
+Rectangles
+f:rect.*\.dat
+
+Boxes
+f:box.*\.dat
+
+Studs
+f:stud.*\.dat
+
+Studs (Fast-Draw)
+f:stu2.*\.dat
+
+Stud Groups
+f:stug.*\.dat
+
+Gear Teeth
+f:tooth.*\.dat
+f:tootb.*\.dat
+
+Technic
+f:axle.*\.dat
+f:axl[0-9e]ho[le0-9]+\.dat
+f:peghol.*\.dat
+t:Technic .*
